[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cmpp"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
# redis = { version = "0.25.3", features = ["tokio-comp"]}
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.6.0"
