[package]
name = "cmpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cmpp"

[[bin]]
name = "app"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
bytes = "1.6.0"
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

